Separa layout de conteúdo

--- a/index.html
+++ b/index.html
@@ -1,54 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Programação Web Interativa</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Space+Mono:400,700|Open+Sans:400,700">
-    <link rel="stylesheet" href="css/style.css"/>
-  </head>
-  <body>
-    <div id="container" class="sidebar">
-      <section class="head">
-        <nav>
-          <ul>
-            <li>
-              <a href="ementa" class="nav">Ementa</a>
-            </li>
-            <li>
-              <a href="info" class="nav">Informações</a>
-            </li>
-          </ul>
-        </nav>
-        <section class="contents">
-          <a href="" class="nav">
-            <h1>Programação Web Interativa</h1>
-          </a>
-        </section>
-        <nav>
-          <ul>
-            <li>
-              <a href="https://web.stanford.edu/class/archive/cs/cs193x/cs193x.1176/" class="nav" target="_blank">
-                Baseado na disciplina CS193X de Stanford
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </section>
-      <section class="main">
-        <nav>
-          <ul>
-            <li>
-              <a href="aulas" class="nav">Aulas</a>
-            </li>
-            <li>
-              <a href="tarefas" class="nav">Tarefas</a>
-            </li>
-          </ul>
-        </nav>
-        <section>
-          <article>
+---
+layout: layout
+---
             <header>
               <h2>
                 FGV EMAp
@@ -78,9 +30,3 @@
 
               <p>Você também poderá enviar comentários anônimos através do <a href="https://forms.gle/BR4qMSmW55zkcEUh6" target="_blank">formulário do Google</a>.</p>
             </div>
-          </article>
-        </section>
-      </section>
-    </div>
-  </body>
-</html>
