Muda link da tarefa 0

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
   
   <h2 id="announcements">Avisos importantes</h2>
   <ul>
-    <li>[02/03] A <a href="tarefas/tarefa-0">tarefa 0</a> está liberada, com prazo para <strong><span class="label">Terça, 09/03</span></strong>.</li>
+    <li>[02/03] A <a href="{{ site.baseurl }}/tarefas/0-boas-vindas">tarefa 0</a> está liberada, com prazo para <strong><span class="label">Terça, 09/03</span></strong>.</li>
   </ul>
 
   <h2 id="course-staff">Contato</h2>
