--- a/tarefas.html
+++ b/tarefas.html
@@ -5,7 +5,7 @@ layout: default
   <h1>Tarefas</h1>
 </header>
 <div>
-  <p>Essa página contém as tarefas dada em sala de aula.</p>
+  <p>Essa página contém as tarefas dadas em sala de aula.</p>
   <hr />
 
   {% for tarefa in site.tarefas %}
