Corrige comportamento de touch no chrome

--- a/pages/photos-touch-events/index.html
+++ b/pages/photos-touch-events/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style-mobile.css">
     <script src="constants.js" defer></script>
     <script src="script.js" defer></script>
+    <script src="https://code.jquery.com/pep/0.4.1/pep.js"></script>
   </head>
   <body>
     <h1>Pizzas I like</h1>
@@ -15,7 +16,7 @@
     <section id="album-view">
     </section>
 
-    <section id="modal-view" class="hidden">
+    <section id="modal-view" class="hidden" touch-action="none">
     </section>
 
   </body>
